examples/negative/patterns/pattern_duplicate_variant_arm.kai
# Issue #534 shape 2: two arms of a `match` use the same variant
# constructor with totally-open subpatterns. The second arm is
# unreachable. Reachability/exhaustiveness must reject.

type Maybe = N | Yes(Int)

fn f(m: Maybe) : Int = match m {
  N -> 0
  Yes(x) -> 1
  Yes(y) -> 2
}

fn main() : Int = f(N)
